# testbench-cli-reporter

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  createPip_whl_tar.sh  pyproject.toml  setup.py  start.py
.github/workflows/: release-binaries.yml
pyinstaller/: create_exe.bat  create_mac_app.sh  run.py
src/TestBenchCliReporter/: __init__.py  __main__.py  actions.py  config_model.py  execution.py  log.py  questions.py  testbench.py  util.py
src/testbench_cli_reporter/: __init__.py  __main__.py  actions.py  config_model.py  execution.py  log.py  questions.py  testbench.py  util.py
testbench-cli-reporter/: __main__.py  actions.py  menues.py  questions.py  testbench.py  util.py
tests/data/: config_empty_actions.json  config_invalid_credentials.json  config_json_export.json  config_json_import.json  config_multiple_exports.json  config_xml_export.json  config_xml_export_invalid_cycleKey.json  config_xml_export_invalid_projectPath.json  config_xml_export_invalid_reportRootUID.json  config_xml_export_invalid_tovKey.json  config_xml_import.json
tests/resources/: Keywords.robot
tests/tests/: test_auth.robot  test_config_option.robot  test_entrypoints.robot  test_json_export.robot  test_json_import.robot  test_xml_export.robot  test_xml_import.robot
