[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testbench-cli-reporter"
description = "CLI Tool to Export XML-Full-Reports from TestBench"
authors = [{name = "imbus AG | Zacharias Daum & René Rohner", email = "rene.rohner@imbus.de"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Acceptance",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.1,<9.0",
  "questionary>=2.1.0,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "urllib3>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.8",
  "pre-commit>=4.2.0",
  "mypy>=1.15.0",
  "flit>=3.12",
  "wheel>=0.45.1",
]
test = [
  "robotframework>=7.2.2",
  "robotframework-robocop>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/imbus/testbench-cli-reporter"

[project.scripts]
testbench-cli-reporter = "testbench_cli_reporter.__main__:main"
TestBenchCliReporter = "testbench_cli_reporter.__main__:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
pretty = true

[tool.ruff]
fix = false
target-version = "py310"
line-length = 110
exclude = [
  "__pycache__",
  ".venv",
  "tools",
  "model",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
ignore = [
  "N815",  # mixedCase variable in class scope
  "N803",  # argument name should be lowercase
  "T201",  # Print statements
  "INP001",  # part of an implicit namespace package
]
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF",
]

[tool.robocop.lint]
select = [
  "LEN04",
  "NAME02",
]
ignore = [
  "DOC01",
  "DOC02",
  "DOC03",
]
reports = [
  "rules_by_id",
  "scan_timer",
]